# P2-One-Card-Game

./: CMakeLists.txt  Changelog.md  README.md  cards.c  cards.h
include/: player.h
src/: card.c  card.h  card_figure.c  init_game.c  init_game.h  main.c  one_play.c  one_play.h  one_round.c  player.c  print_card.c  tool_box.c  tool_box.h
